--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="nav__container">
                 <div class="nav__logo">
-                <img class="nav__logo--img" src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+                    <img class="nav__logo--img" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
                 <h1>Treact</h1>
                 </div>
                 <ul class="nav__links">
